maybe fixed nav bar blocking content on mobile?

--- a/style.css
+++ b/style.css
@@ -491,6 +491,7 @@ ul {
     body {
         font-size: 16px;
         line-height: 1.5;
+        padding-top: 70px;
     }
 
     header {
